--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "dependencies": {
     "react": "^16.7.0",
     "react-dom": "^16.7.0",
-    "react-native-xml2js": "^1.0.3",
-    "react-scripts": "2.1.3"
+    "react-scripts": "2.1.3",
+    "xml2js": "^0.4.19"
   },
   "scripts": {
     "start": "react-scripts start",
