--- a/infra/octopus-check-cert.service
+++ b/infra/octopus-check-cert.service
@@ -4,7 +4,7 @@ After=network.target
 
 [Service]
 User=nobody
-ExecStart=/usr/local/bin/shell2http -host <host-ip> -port 3001 /check-cert "echo | openssl s_client -servername <servername> -connect <server>:443 2>/dev/null | openssl x509 -noout -dates"
+ExecStart=/usr/local/bin/shell2http -host localhost -port 3042 /check-cert "echo | openssl s_client -servername myabilia -connect myabilia.com:443 2>/dev/null | openssl x509 -noout -dates"
 Restart=on-failure
 
 [Install]
