--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "dependencies": {
     "react": "^16.8.0",
     "react-dom": "^16.8.0",
-    "react-scripts": "2.1.3",
+    "react-scripts": "^2.1.3",
     "xml2js": "^0.4.19"
   },
   "scripts": {
